// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Footer test showing actions 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "Abort",
      },
      Object {
        "execute": [MockFunction],
        "name": "Release",
      },
      Object {
        "execute": [MockFunction],
        "name": "Complete",
      },
    ]
  }
>
  <div
    className="kogito-components-common__form-footer-padding-top"
    data-ouia-component-type="form-footer"
    data-ouia-safe={true}
  >
    <ActionList>
      <div
        className="pf-c-action-list"
      >
        <ActionListItem
          key="form-action-0"
        >
          <div
            className="pf-c-action-list__item"
          >
            <Button
              isDisabled={false}
              key="submit-Complete"
              onClick={[Function]}
              type="submit"
              variant="primary"
            >
              <ButtonBase
                innerRef={null}
                isDisabled={false}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[Function]}
                  role={null}
                  type="submit"
                >
                  Complete
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ActionListItem>
        <ActionListItem
          key="form-action-1"
        >
          <div
            className="pf-c-action-list__item"
          >
            <Button
              isDisabled={false}
              key="submit-Abort"
              onClick={[Function]}
              type="submit"
              variant="secondary"
            >
              <ButtonBase
                innerRef={null}
                isDisabled={false}
                onClick={[Function]}
                type="submit"
                variant="secondary"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-secondary"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[Function]}
                  role={null}
                  type="submit"
                >
                  Abort
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ActionListItem>
        <ActionListItem
          key="form-action-2"
        >
          <div
            className="pf-c-action-list__item"
          >
            <Button
              isDisabled={false}
              key="submit-Release"
              onClick={[Function]}
              type="submit"
              variant="secondary"
            >
              <ButtonBase
                innerRef={null}
                isDisabled={false}
                onClick={[Function]}
                type="submit"
                variant="secondary"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-secondary"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[Function]}
                  role={null}
                  type="submit"
                >
                  Release
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ActionListItem>
      </div>
    </ActionList>
  </div>
</FormFooter>
`;

exports[`Form Footer test showing disabled 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "Abort",
      },
      Object {
        "execute": [MockFunction],
        "name": "Release",
      },
      Object {
        "execute": [MockFunction],
        "name": "Complete",
      },
    ]
  }
  enabled={false}
>
  <div
    className="kogito-components-common__form-footer-padding-top"
    data-ouia-component-type="form-footer"
    data-ouia-safe={true}
  >
    <ActionList>
      <div
        className="pf-c-action-list"
      >
        <ActionListItem
          key="form-action-0"
        >
          <div
            className="pf-c-action-list__item"
          >
            <Button
              isDisabled={true}
              key="submit-Complete"
              onClick={[Function]}
              type="submit"
              variant="primary"
            >
              <ButtonBase
                innerRef={null}
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                <button
                  aria-disabled={true}
                  aria-label={null}
                  className="pf-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={true}
                  onClick={[Function]}
                  role={null}
                  tabIndex={null}
                  type="submit"
                >
                  Complete
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ActionListItem>
        <ActionListItem
          key="form-action-1"
        >
          <div
            className="pf-c-action-list__item"
          >
            <Button
              isDisabled={true}
              key="submit-Abort"
              onClick={[Function]}
              type="submit"
              variant="secondary"
            >
              <ButtonBase
                innerRef={null}
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="secondary"
              >
                <button
                  aria-disabled={true}
                  aria-label={null}
                  className="pf-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={true}
                  onClick={[Function]}
                  role={null}
                  tabIndex={null}
                  type="submit"
                >
                  Abort
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ActionListItem>
        <ActionListItem
          key="form-action-2"
        >
          <div
            className="pf-c-action-list__item"
          >
            <Button
              isDisabled={true}
              key="submit-Release"
              onClick={[Function]}
              type="submit"
              variant="secondary"
            >
              <ButtonBase
                innerRef={null}
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="secondary"
              >
                <button
                  aria-disabled={true}
                  aria-label={null}
                  className="pf-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={true}
                  onClick={[Function]}
                  role={null}
                  tabIndex={null}
                  type="submit"
                >
                  Release
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ActionListItem>
      </div>
    </ActionList>
  </div>
</FormFooter>
`;
